Updated about page with new picture + formatting

--- a/about.html
+++ b/about.html
@@ -52,21 +52,30 @@
           <header class="major">
             <h1>About</h1>
           </header>
-          <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-          <p>Here at RPM Consulting of Texas, we take care of it all for our clients.</p>
+          <span class="image main"><img src="images/chairs_about.png" alt="" /></span>
+          <div class="row">
+            <div class="col-6 col-12-small">
+              <h4>Here at RPM Consulting of Texas, we take care of it all for our clients.</h4>
 
-          <p>From our initial cost analysis of your water and sewer billing history, we put together a plan that will
-            show you the savings our monitoring and reporting services can deliver for your business. We will furnish
-            and install utility grade smart meters and monitor your sites remotely.</p>
+              <p>From our initial cost analysis of your water and sewer billing history, we put together a plan that
+                will
+                show you the savings our monitoring and reporting services can deliver for your business. We will
+                furnish
+                and install utility grade smart meters and monitor your sites remotely.</p>
+            </div>
+            <div class="col-6 col-12-small">
+              <H4>With daily readings, we will create reports and alerts, and submit your evaporation credit requests to
+                local
+                utilities. </h4>
 
-          <p>With daily readings, we will create reports and alerts, and submit your evaporation credit requests to
-            local
-            utilities. </p>
+              <p>With annual reports for each site, we ensure that those credits come back to your bottom line.</p>
+            </div>
+          </div>
+          <div class="row">
+            <H4>Mercedes Trent – Owner / CEO</h4>
+            <H>Robert Mabry – Operations Consultant</p>
+          </div>
 
-          <p>With annual reports for each site, we ensure that those credits come back to your bottom line.</p>
-
-          <p>Mercedes Trent – Owner / CEO</P>
-          <p> Robert Mabry – Operations Consultant</p>
         </div>
       </section>
 
