Fixed contact page, inserted how we do it text

--- a/how_we_do_it.html
+++ b/how_we_do_it.html
@@ -52,26 +52,58 @@
           <header class="major">
             <h1>How We Do It</h1>
           </header>
-          <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-          <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis
-            dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-            Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia
-            malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus,
-            commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh
-            porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
-            Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in
-            aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-            turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed
-            vehicula.</p>
-          <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-            mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris,
-            consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit.
-            Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+          <span class="image main"><img src="images/water_is_better.png" alt="" /></span>
+          <div class="row">
+            <div class="col-6 col-12-small">
+              <h3>How do Evaporation credits work?</h3>
+              <p>
+                These credits, also known as sewer credits, allow you to get money back for water volume that evaporates
+                from cooling towers, irrigation systems, or condensers. For the most part, water and sewer utilities
+                charge
+                your building based on total water consumption. If 50,000 gallons flow through your water meter, the
+                utility
+                companies assume that 50,000 gallons will be put back into the sewer system. This simply is not the case
+                when using a cooling tower or condenser where a large percentage of water evaporates and does not go
+                back
+                into the sewer system. This billing practice creates a charge to your business for services you do not
+                use.
+                By monitoring and measuring these volumes, we can prove the exact water used and send those measurements
+                to
+                local utility companies.
+              </p>
+            </div>
+            <div class="col-6 col-12-small">
+              <h3>What will the savings be like?</h3>
+              <p>
+                Sewer credits are often overlooked and something that companies can recover to drastically reduce
+                operating
+                costs associated with cooling towers, irrigation systems or condensers. Savings can range from 20% to
+                40%
+                of
+                monthly sewer charges, and help reduce sewer costs for many years. Credits are also a hedge against
+                annual
+                sewer rate increases.
+              </p>
+            </div>
+            <div class="col-6 col-12-small">
+              <h3>Who can receive water credits?</h3>
+              <p>
+                We currently work with almost 200 water utilities in 35 states to secure sewer credits for commercial
+                clients who operate cooling towers, irrigation systems or condensers. To find out if your building
+                qualifies, send us a copy of your most recent water and sewer bill.
+              </p>
+            </div>
+            <div class="col-6 col-12-small">
+
+              <h3>LEED Points</h3>
+              <p>
+                Sub-metering cooling towers can qualify for up to 2 LEED points. If your company is pursuing LEED
+                certification, sub-metering can help you qualify, in addition to reducing your operating costs.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
-
     </div>
 
     <!-- Contact -->
