--- a/about.html
+++ b/about.html
@@ -111,17 +111,17 @@
             <div class="contact-method">
               <span class="icon solid alt fa-envelope"></span>
               <h3>Email</h3>
-              <a href="#">information@untitled.tld</a>
+              <a href="#">mtrent@rpmconsultingtx.com</a>
             </div>
           </section>
           <section>
             <div class="contact-method">
               <span class="icon solid alt fa-phone"></span>
               <h3>Phone</h3>
-              <span>(000) 000-0000 x12387</span>
+              <span>214-972-9151</span>
             </div>
           </section>
-          <section>
+          <!-- <section>
             <div class="contact-method">
               <span class="icon solid alt fa-home"></span>
               <h3>Address</h3>
@@ -129,7 +129,7 @@
                 Nashville, TN 00000<br />
                 United States of America</span>
             </div>
-          </section>
+          </section> -->
         </section>
       </div>
     </section>
