Try somthing with contact section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
         <section class="split">
           <section>
             <div class="contact-method">
+              <span class="icon solid alt fa-home"></span>
+              <h3>Interested or have a question?</h3>
+              <span>Send us a message.<br />
+                We'll get back you as soon as possible.<br />
+              </span>
+            </div>
+          </section>
+          <section>
+            <div class="contact-method">
               <span class="icon solid alt fa-envelope"></span>
               <h3>Email</h3>
               <a href="#">mtrent@rpmconsultingtx.com</a>
@@ -142,15 +151,7 @@
               <span>214-972-9151</span>
             </div>
           </section>
-          <!-- <section>
-            <div class="contact-method">
-              <span class="icon solid alt fa-home"></span>
-              <h3>Address</h3>
-              <span>1234 Somewhere Road #5432<br />
-                Nashville, TN 00000<br />
-                United States of America</span>
-            </div>
-          </section> -->
+
         </section>
       </div>
     </section>
