Happy with contact section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <span class="icon solid alt fa-home"></span>
               <h3>Interested or have a question?</h3>
               <span>Send us a message.<br />
-                We'll get back you as soon as possible.<br />
+                We'll get back to you as soon as possible.<br />
               </span>
             </div>
           </section>
@@ -151,7 +151,6 @@
               <span>214-972-9151</span>
             </div>
           </section>
-
         </section>
       </div>
     </section>
