--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section id="one" class="tiles">
         <article>
           <span class="image">
-            <img src="images/falaq-lazuardi-THXnq7AKJdM-unsplash.jpg" alt="" />
+            <img src="images/pic01.jpg" alt="" />
           </span>
           <header class="major">
             <h3><a href="about.html" class="link">About</a></h3>
@@ -83,7 +83,7 @@
         </article>
         <article>
           <span class="image">
-            <img src="images/adyant-pankaj-z7X53SkLAj4-unsplash.jpg" alt="" />
+            <img src="images/pic03.jpg" alt="" />
           </span>
           <header class="major">
             <h3><a href="how_we_do_it.html" class="link">How we do it</a></h3>
